--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvPhrase"/>
+    <TextView
+    android:id="@+id/tvHighScore"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:letterSpacing=".1"
+    android:text="High Score: "
+    android:textStyle="bold"
+    android:textColor="@color/white"
+    android:background="@color/purple_200"
+    android:textAlignment="center"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/tvLetter" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMessages"
@@ -43,7 +57,7 @@
         android:layout_margin="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvLetter"
+        app:layout_constraintTop_toBottomOf="@id/tvHighScore"
         app:layout_constraintBottom_toTopOf="@id/llBottom"/>
     <LinearLayout
         android:layout_width="match_parent"
